# sum_ia

./: .gitignore  CMakeLists.txt  FirstAttempt.py  README.md  env.yml  update_env.sh
apps/: CMakeLists.txt  main.cpp  tools.h
docs/: CMakeLists.txt  mainpage.md
include/mathlib/: functions.h  matrix.h  vector.h
notebook/: FirstAttempt.ipynb  launch.sh
scripts/: env.yml
scripts/py_mathlib/: setup.py
scripts/sum_ia_python/: FirstAttempt.py  config.py  create_dataset.py  env.yml  main.py  network.py  utils.py
scripts/sum_ia_python/notebook/: FirstAttempt.ipynb
src/: CMakeLists.txt  matrix.cpp  py_test.cpp  vector.cpp
tests/: CMakeLists.txt  testMathLibVector.cpp  testmathlib.cpp
